fixed text alignment

--- a/prophet.css
+++ b/prophet.css
@@ -15,6 +15,7 @@ h1:hover {
     color:black;
 }
 p {
+    display: block;
     background-color: #f792be;
     text-align: center;
 }
@@ -24,6 +25,14 @@ img {
 }
 #image-box {
     text-align: center;
+}
+h2{
+    background-color: #f792be;
+    color: #FFFFFF;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
 }
 body div {
     background-color: #f792be;
